# hackfest

./: .gitignore  AGENTS_DOCUMENTATION.md  LAUNCH_GUIDE.md  NEXT_STEPS.md  Plan.md  README.md  STATUS_REPORT.txt  debug_pdf.py  demo_ca_system.py  frontend.md  start.bat
backend/: .gitignore  main.py  pyproject.toml
backend/finpilot/: __init__.py  config.py  ingestion.py
backend/finpilot/agents/: bookkeeping_agent.py  expense_agent.py  gst_agent.py  orchestrator_agent.py  profit_agent.py  reconciliation_agent.py  tax_savings_agent.py
backend/finpilot/api/: deps.py
backend/finpilot/api/routers/: agents.py  ingest.py  users.py
backend/finpilot/db/: mongo.py
backend/finpilot/models/: transaction.py
backend/finpilot/parsers/: __init__.py  pdf_parser.py
backend/finpilot/scripts/: seed_demo_data.py
backend/finpilot/tools/: __init__.py  compliance_tools.py  finance_tools.py
frontend/: __extract_script.py  index.html  tmp_check.js
pocket-cfo-frontend/: middleware.js  next.config.mjs  package-lock.json  package.json
pocket-cfo-frontend/app/: layout.js  page.js
pocket-cfo-frontend/components/: Sidebar.js
pocket-cfo-frontend/models/: User.js
pocket-cfo-parser/: .gitignore  README.md  requirements.txt
pocket-cfo-parser/api/: main.py
pocket-cfo-parser/pocket_cfo_parser/: __init__.py  compliance_engine.py  ingestion.py
pocket-cfo-parser/scripts/: seed_demo_data.py
pocket-cfo-parser/tests/: test_ca_agents.py  test_expense_agent.py  test_gst_agent.py  test_ingestion.py  test_pdf_parser.py  test_profit_agent.py  test_sms_parser.py
(+29 files in other folders)
